All_Component_DX/force-app/main/default/objects/PM_Offering__c/PM_Offering__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>This is to define Preventive Maintenance offered as part of Service Plan</description>
    <label>PM Offering</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PM Offerings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>