All_Component_DX/force-app/main/default/objects/PM_Offering__c/fields/Line_Price__c.field-meta.xml
<CustomField>
    <fullName>Line_Price__c</fullName>
    <label>Line Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>