All_Component_DX/force-app/main/default/objects/PM_Offering__c/fields/PM_Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>PM_Plan_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PM Plan Template</label>
    <referenceTo>PM_Plan_Template__c</referenceTo>
    <relationshipLabel>PM Offerings</relationshipLabel>
    <relationshipName>PM_Offerings</relationshipName>
    <type>Lookup</type>
</CustomField>