All_Component_DX/force-app/main/default/objects/PM_Offering__c/fields/PM_Plan_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>PM_Plan_Template_Name__c</fullName>
    <formula>PM_Plan_Template__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PM Plan Template Name</label>
    <type>Text</type>
</CustomField>