All_Component_DX/force-app/main/default/objects/PM_Offering__c/fields/Service_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract_End_Date__c</fullName>
    <formula>Service_Contract__r.End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Contract End Date</label>
    <type>Date</type>
</CustomField>