All_Component_DX/force-app/main/default/objects/PM_Offering__c/fields/Service_Plan__c.field-meta.xml
<CustomField>
    <fullName>Service_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Plan</label>
    <referenceTo>Service_Plan__c</referenceTo>
    <relationshipLabel>PM Offerings</relationshipLabel>
    <relationshipName>PM_Offerings</relationshipName>
    <type>Lookup</type>
</CustomField>